Tareas/HT_202003745/go-server/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: luiscastillo2001/mi-app-go:latest 
        ports:
        - containerPort: 8080
